ai-app-store-front/templates/ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - super-app.in
    secretName: tls-secret
  rules:
    - host: super-app.in
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: store-front
                port: 
                  number: 80
